--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.gotson</groupId>
   <artifactId>sqlite-jdbc</artifactId>
-  <version>3.32.3.4</version>
+  <version>3.32.3.6</version>
   <name>SQLite JDBC</name>
   <description>SQLite JDBC library</description>
 
@@ -149,6 +149,21 @@
             </Import-Package>
           </instructions>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
 
